# CV_Filtering

./: CMakeLists.txt  README.md  Result.ipynb  Results.ipynb  build.sh  main.cpp  output
filters/: Histogram.hpp  MedianFilterConst.cpp  MedianFilterConst.h  MedianFilterHuang.cpp  MedianFilterHuang.h  MedianFilterI.h  MedianFilterNaive.cpp  MedianFilterNaive.h  SelectFilter.hpp
